--- a/style.css
+++ b/style.css
@@ -37,7 +37,23 @@ h1,h2,h3,h4,h5,p,span{
 .hide{
     display: none;
 }
+/* scrollbar  */
+body::-webkit-scrollbar{
+    width:15px;
 
+}
+body::-webkit-scrollbar-track {
+background: #2a2a2a; /* Dark mode vibes */
+/* border-radius: 10px; */
+}
+body::-webkit-scrollbar-thumb {
+background: #4f4f4f; /* Greenish for contrast */
+border-radius: 10px;
+/* transition: background 1s; */
+}
+body::-webkit-scrollbar-thumb:hover {
+background: #1c1c1c; /* Darker green on hover */
+}
 /* sidebar  */
 .sidebar {
     width: 50px;
